// Container metadata payload.

syntax = "proto3";

package work.runtime.container;

import "work/runtime/coding.proto";

// A container is defined by a compiled Wasm component
// and some metadata to describe how to interact with it.
message Container {

  // Compiled Wasm byte code.
  bytes component = 1;

  // Mapping from gRPC method names (e.g. `SayHello`) to method configurations.
  map<string, Method> methods = 2;
}

// Represents a method signature.
message Method {

  // The name of the Wasm function to invoke for this method.
  string function_name = 1;

  // Type definition of request messages.
  work.runtime.coding.Field request_decoder = 2;

  // Type definition of response messages.
  work.runtime.coding.Field response_encoder = 3;

  // True iff the method uses client-side streaming.
  bool client_streaming = 4;

  // True iff the method uses server-side streaming.
  bool server_streaming = 5;
}